feat: custom metrics and PID

--- a/biome.json
+++ b/biome.json
@@ -29,7 +29,11 @@
     "enabled": true,
     "rules": {
       "complexity": {
-        "noStaticOnlyClass": "off"
+        "noStaticOnlyClass": "off",
+        "noBannedTypes": "off"
+      },
+      "suspicious": {
+        "noExplicitAny": "off"
       }
     },
     "include": ["src/*.ts", "src/**/*.ts", "test/*.spec.ts", "test/**/*.spec.ts"],
