--- a/biome.json
+++ b/biome.json
@@ -10,7 +10,7 @@
     "indentWidth": 4,
     "lineWidth": 160,
     "indentStyle": "space",
-    "include": ["src/*.ts", "src/**/*.ts", "test/*.spec.ts", "test/**/*.spec.ts"],
+    "include": ["bench/*.ts", "src/*.ts", "src/**/*.ts", "test/*.spec.ts", "test/**/*.spec.ts"],
     "ignore": ["coverage", "dist", "node_modules"]
   },
   "javascript": {
@@ -36,7 +36,7 @@
         "noExplicitAny": "off"
       }
     },
-    "include": ["src/*.ts", "src/**/*.ts", "test/*.spec.ts", "test/**/*.spec.ts"],
+    "include": ["bench/*.ts", "src/*.ts", "src/**/*.ts", "test/*.spec.ts", "test/**/*.spec.ts"],
     "ignore": ["coverage", "dist", "node_modules"]
   }
 }
